# data-science-gym

./: README.md  pyproject.toml  test.py
section-A/: A1.py  exercises.md
