[project]
name = "data-science-gym"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan",email = "jb5nnhy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo (>=0.15.0,<0.16.0)",
    "sympy (>=1.14.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
